--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 .excerpt_tags i{color: #9e9e9e;transition: color 1s;}
 i.excerpt_tags:hover,a.excerpt_tags:hover,i.excerpt_tags:focus,a.excerpt_tags:focus{color:#8BC34A;}
 
+.tags_column .comments .post_links{margin-left: auto;margin-right: auto;}
 .tags_column a{color:#777;background-color: #eee;font-family: monospace;transition: color 1s;margin: 0.5rem;padding: 2px 6px;line-height: 2.5rem;display: inline-block;}
 .tags_column i{color: #9e9e9e;transition: color 1s;}
 h2.tags_column{font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans GB, WenQuanYi Micro Hei, Verdana, Aril, sans-serif;;color: #9c9c9c;}
@@ -22,7 +23,7 @@ a.next_post,i.next_post{color: #9e9e9e;transition: color 1s;display: block;;}
 a.prev_post,i.prev_post{color: #9e9e9e;transition: color 1s;display: block;;}
 a.next_post:hover,i.next_post:hover,a.next_post:focus,i.next_post:focus{color: #8BC34A;}
 a.prev_post:hover,i.prev_post:hover,a.next_post:focus,i.next_post:focus{color: #8BC34A;}
-div.post_links{color: #9c9c9c;border-top: 1px solid #e1e5e7;border-bottom: 1px solid #e1e5e7;width: 100%;padding: 8px 0;margin: 4rem 0 2rem 0;display: block;}
+div.post_links{color: #9c9c9c;border-top: 1px solid #e1e5e7;border-bottom: 1px solid #e1e5e7;width: 100%;padding: 8px 0;display: block;margin-top: 4rem;margin-bottom: 2rem;}
 /** iPhone **/
 @media only screen and (min-width: 320px) and (max-width: 424px) {
   h1.blog-title {font-size: 5.9rem;font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans GB, WenQuanYi Micro Hei, Verdana, Aril, sans-serif;}
