--- a/partials/comment.hbs
+++ b/partials/comment.hbs
@@ -1,6 +1,8 @@
+<div class="comments">
 <!-- 多说评论框 start -->
 	<div class="ds-thread" data-thread-key="{{id}}" data-title="{{title}}" data-url="{{url}}"></div>
 <!-- 多说评论框 end -->
+</div>
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript">
 var duoshuoQuery = {short_name:"xinlvying"};
