--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}#hidden-nav{z-index:3}main{z-index:2}html{font-size:62.5%}body,input,textarea{font-family:"Libre Baskerville",serif;font-size:14px;font-size:1.4rem;line-height:1.5;font-weight:400;color:#505050}h1{font-family:fantasy;font-size:30px;font-size:5rem;color:#fafafa}h1.blog-title{font-size:4rem;}h1.author-title{font-size:4rem;}h1.post-title{font-size:2.14rem;}h2{font-size:22px;font-size:2.2rem}h2 a{text-decoration:none}h3{font-size:14pxfont-size:1.4rem;font-weight:700;color:#c8c8c8}label{font-style:italic}a{color:inherit;font-weight:700;text-decoration:none;transition:color 0.6s}a:hover{color:#8BC34A}nav a{text-decoration:none}.btn,input[type="submit"],.homepage-links li a{font-family:"Libre Baskerville",serif;font-size:12px;font-size:1.2rem}small{font-size:12px;font-size:1.2rem}blockquote{font-size:2rem}.regular nav{font-size:12px;font-size:1.2rem}.regular nav .fa{font-size:18px;font-size:1.8rem}pre,code{font-family:"PT Mono",monospace}.btn,input[type="submit"],.homepage-links li a{width:11.5rem;margin:1rem 0;padding:0.4rem;text-align:center;font-size:1.5rem;font-family:cursive;border:1px solid #eee;border-radius:15px;display:inline-block;transition:background-color 0.6s, color 0.6s}
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}#hidden-nav{z-index:3}main{z-index:2}html{font-size:62.5%}body,input,textarea{font-family:"Libre Baskerville",serif;font-size:14px;font-size:1.4rem;line-height:1.5;font-weight:400;color:#505050}h1{font-family:fantasy;font-size:30px;font-size:5rem;color:#fafafa}h1.blog-title{font-size:4rem;}h1.author-title{font-size:4rem;}h1.post-title{font-size:2.14rem;}h2{font-size:22px;font-size:2.2rem}h2 a{text-decoration:none}h3{font-size:14pxfont-size:1.4rem;font-weight:700;color:#c8c8c8}label{font-style:italic}a{color:inherit;font-weight:700;text-decoration:none;transition:color 0.6s}a:hover{color:#8BC34A}nav a{text-decoration:none}.btn,input[type="submit"],.homepage-links li a{font-family:"Libre Baskerville",serif;font-size:12px;font-size:1.2rem}small{font-size:12px;font-size:1.2rem}blockquote{font-size:2rem}.regular nav{font-size:12px;font-size:1.2rem}.regular nav .fa{font-size:18px;font-size:1.8rem}pre,code{font-family:"PT Mono",monospace}.btn,input[type="submit"],.homepage-links li a{width:8rem;margin:1rem 0;padding:0.4rem;text-align:center;font-size:1.5rem;font-family:cursive;border:1px solid #eee;border-radius:15px;display:inline-block;transition:background-color 0.6s, color 0.6s}
 .btn:hover,input[type="submit"]:hover,.homepage-links li a:hover,.btn:focus,input[type="submit"]:focus,.homepage-links li a:focus{background-color:#eee;color:#8BC34A}
 .pagination{margin-top:1rem}.pagination .page-number{margin:0 1rem}span.error-message{padding-bottom:1rem;display:block}body main,body footer{top:50vh;position:relative}body.error-template main,body.error-template footer,body.author-template main,body.author-template footer,body.home-template main,body.home-template footer,body.private-template main,body.private-template footer{top:0}header.regular{position:fixed;top:0;left:0;background-size:cover;background-position:center;width:100%;height:50vh}header.regular nav{color:#fafafa}.title-container{position:absolute;top:50%;left:50%;-webkit-transform:translate(-50%, -50%);-moz-transform:translate(-50%, -50%);-ms-transform:translate(-50%, -50%);-o-transform:translate(-50%, -50%);transform:translate(-50%, -50%);width:75%;text-align:center}.regular nav{position:absolute;top:0;left:0;width:100%;height:50px;padding:0 7%;line-height:50px}.regular nav:after{content:"";display:table;clear:both}.brand{float:left}.brand img{height:35px;width:auto;margin-top:7px}ul.navigation{float:right}@media screen and (min-width: 600px){ul.navigation li{display:inline-block;padding:0 5px;margin:0 5px}ul.navigation li#show-nav{display:none}}@media screen and (max-width: 600px){ul.navigation li{display:none}ul.navigation li#show-nav{display:inline-block}}#hidden-nav{top:-50vh;position:fixed;width:100%;height:50vh;background-color:#c8c8c8;text-align:center;padding:20px}#hidden-nav ul{position:absolute;top:50%;left:50%;-webkit-transform:translate(-50%, -50%);-moz-transform:translate(-50%, -50%);-ms-transform:translate(-50%, -50%);-o-transform:translate(-50%, -50%);transform:translate(-50%, -50%);width:85%}#hidden-nav li{display:block;padding:2rem;border-bottom:1px solid #fafafa}#hidden-nav li a{text-decoration:none}#hidden-nav li:last-child{border-bottom:none}p{margin-bottom:1.5rem}blockquote{margin-bottom:1.5rem;border-left:5px solid #c8c8c8;padding:1rem;quotes:"“" "”" "‘" "’"}blockquote p{margin-bottom:0}blockquote:before{content:open-quote;float:left;padding-right:1rem;font-size:5rem;line-height:1;color:#c8c8c8}pre,code{background-color:#fff}code{padding:0 5px}pre{padding:10px;margin-bottom:1.5rem}.post-content h1,.post-content h2,.post-content h3{margin:2.5rem 0 1.5rem}.post-content ul{list-style-type:disc}.post-content ul,.post-content ol{display:block;width:100%;padding-left:10%;margin-bottom:1.5rem}.post-content img{max-width:100%;height:auto;margin:0 auto}.post-excerpt{padding:2rem 0;border-top:1px solid #c8c8c8}.post-excerpt:after{content:"";display:table;clear:both}.post-excerpt hgroup{padding-bottom:2rem}.post-excerpt .read-more{float:right}.post-excerpt:first-child{border-top:none}.pagination{width:100%;text-align:center;margin-bottom:20px}textarea,input,input[type="text"],input[type="button"],input[type="submit"]{-webkit-appearance:none;-moz-appearance:none;border-radius:0}input,textarea{margin:0.3rem auto 1rem;padding:5px;text-align:center;border:3px solid #c8c8c8;width:85%;max-width:400px;outline:none}input:focus,textarea:focus{border:3px solid #710109}input{height:3.5rem}input[type="submit"]{border-radius:20px;background-color:#fafafa;cursor:pointer}label,input,textarea{display:block}#contactform{text-align:center;margin-top:3rem}html,body{background-color:#fafafa}main{width:100%;padding:3rem 7% 2rem;margin:0 auto;background-color:#fafafa;position:relative}.post-content,.post-excerpt{max-width:960px;margin-left:auto;margin-right:auto}footer{height:70px;border-top:1px solid #c8c8c8;text-align:center;padding:20px;position:relative;background-color:#fff}#homepage-hero{background-size:cover;background-position:center;width:100%;height:100vh;position:relative;color:#fafafa}#homepage-hero .btn,#homepage-hero input[type="submit"],#homepage-hero .homepage-links li a,.homepage-links li #homepage-hero a{margin:1rem}p.blog-description{font-size:1.5rem;font-family:cursive;}p.author-description{font-size:1.5rem;font-family:cursive;}.homepage-links li{display:inline-block}.homepage-links li a{display:inline-block}body.post-template .post-excerpt .author{display:none}.post-meta{color:#fafafa;font-family: inherit;}.post-footer{margin-top:3rem;padding-bottom:3rem;text-align:center}.post-footer .share .fa{width:30px;height:30px;background-color:#c8c8c8;color:#fafafa;border-radius:50%;text-align:center;padding:8px;margin:5px 0 0 5px;transition:background-color 0.6s}.post-footer .share .fa:hover{background-color:#8BC34A}.more-post{border-top:1px solid #c8c8c8;text-align:left}
 .social-icon .share .fa{width: 40px;height: 40px;border-radius:50%;text-align:center;padding:5px;margin:1rem 0 0 1rem;transition:background-color 0.6s;display: inline-block;}
-.social-icon:hover,.share:hover,.fa:hover{background-color: #eee;}
+.social-icon:hover,.fa:hover{background-color: #eee;}
 .excerpt_tags a{font-family: monospace;transition: color 1s;}
 .excerpt_tags i{color: #9e9e9e;transition: color 1s;}
 i.excerpt_tags:hover,a.excerpt_tags:hover,i.excerpt_tags:focus,a.excerpt_tags:focus{color:#8BC34A;}
@@ -19,7 +19,16 @@ h2.tags_column{font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans 
 .post_tags i:hover,.post_tags a:hover,.post_tags i:focus,post_tags a:focus{color:#8BC34A;}
 
 /*.back-to-top .fa{width: 30px;height: 30px;border-radius:50%;text-align:center;transition:background-color 0.6s;display: inline-block;float: right;position: relative;}*/
-#gotop {width: 48px;height: 48px;position: fixed;bottom: 40px;right: 10px;top: auto;display: block;cursor: pointer;}
+#gotop {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    text-align: center;
+    padding: 5px;
+    margin: 1rem 0 0 1rem;
+    transition: background-color 0.6s;
+    display: inline-block;
+    position: fixed;}
 
 a.next_post,i.next_post{color: #9e9e9e;transition: color 1s;display: block;;}
 a.prev_post,i.prev_post{color: #9e9e9e;transition: color 1s;display: block;;}
@@ -60,7 +69,7 @@ div.tags_column,div.comments,div.post_links{margin: 4rem auto 2rem auto;max-widt
 
 }
 
-@media only screen and (min-width: 658px) and (max-width: 877px){
+/*@media only screen and (min-width: 658px) and (max-width: 877px){
   .btn, input[type="submit"], .homepage-links li a {
     width: 10rem;
     margin: 1rem 0;
@@ -76,14 +85,14 @@ div.tags_column,div.comments,div.post_links{margin: 4rem auto 2rem auto;max-widt
 #homepage-hero .btn, #homepage-hero input[type="submit"], #homepage-hero .homepage-links li a, .homepage-links li #homepage-hero a {
     margin: 0 auto;
 }
-}
+}*/
 /** iPad **/
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
   h1.blog-title {font-size: 10rem;font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans GB, WenQuanYi Micro Hei, Verdana, Aril, sans-serif;}
   p.blog-description {font-size: 3rem;margin-bottom: 2.5rem;font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans GB, WenQuanYi Micro Hei, Verdana, Aril, sans-serif;}
 
   h1.author-title{font-size: 10rem;font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans GB, WenQuanYi Micro Hei, Verdana, Aril, sans-serif;}
-  p.author-description{margin: 0 auto;font-size: 2.5rem;font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans GB, WenQuanYi Micro Hei, Verdana, Aril, sans-serif;}
+  p.author-description{margin: 0 auto 1.5rem 0;font-size: 2.5rem;font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans GB, WenQuanYi Micro Hei, Verdana, Aril, sans-serif;}
 
   h1.post-title{font-size: 4rem;font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans GB, WenQuanYi Micro Hei, Verdana, Aril, sans-serif;}
   h3.post-meta{margin: 1rem;color: #fafafa;font-family: inherit;font-size: 2.5rem;font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans GB, WenQuanYi Micro Hei, Verdana, Aril, sans-serif;}
@@ -103,11 +112,11 @@ div.tags_column,div.comments,div.post_links{margin: 4rem auto 2rem auto;max-widt
   p.blog-description {font-size: 3rem;margin-bottom: 3rem;font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans GB, WenQuanYi Micro Hei, Verdana, Aril, sans-serif;}
 
   h1.author-title{font-size: 10rem;font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans GB, WenQuanYi Micro Hei, Verdana, Aril, sans-serif;}
-  p.author-description{margin: 0 auto;font-size: 2.5rem;margin-bottom: 2.5rem;font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans GB, WenQuanYi Micro Hei, Verdana, Aril, sans-serif;}
+  p.author-description{margin: 0 auto 1.5rem 0;font-size: 2.5rem;font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans GB, WenQuanYi Micro Hei, Verdana, Aril, sans-serif;}
 
-  h1.post-title{font-size: 5rem;font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans GB, WenQuanYi Micro Hei, Verdana, Aril, sans-serif;}
-  h3.post-meta{margin: 1rem;color: #fafafa;font-family: inherit;font-size: 2.5rem;font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans GB, WenQuanYi Micro Hei, Verdana, Aril, sans-serif;}
-  .post_tags i {font-size: 2rem;margin: 1rem 0 0 0;}
+  h1.post-title{font-size: 4rem;font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans GB, WenQuanYi Micro Hei, Verdana, Aril, sans-serif;}
+  h3.post-meta{margin: 0rem;color: #fafafa;font-family: inherit;font-size: 2.5rem;font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans GB, WenQuanYi Micro Hei, Verdana, Aril, sans-serif;}
+  .post_tags i {font-size: 2rem;margin: 0.5rem 0 0 0;}
 
   h1.blogrollpage-title{font-size: 8rem;font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans GB, WenQuanYi Micro Hei, Verdana, Aril, sans-serif;}
 
