--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,15 +16,15 @@ h2.tags_column{font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans 
 
 .post_tags a{color:#fafafa;font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans GB, WenQuanYi Micro Hei, Verdana, Aril, sans-serif;transition: color 1s;}
 .post_tags i{color: #fafafa;transition: color 1s;margin: 2rem;}
-.post_tags a:hover,post_tags a:focus{color:#8BC34A;}
+.post_tags i:hover,.post_tags a:hover,.post_tags i:focus,post_tags a:focus{color:#8BC34A;}
 
 /*.back-to-top .fa{width: 30px;height: 30px;border-radius:50%;text-align:center;transition:background-color 0.6s;display: inline-block;float: right;position: relative;}*/
 #gotop {width: 48px;height: 48px;position: fixed;bottom: 40px;right: 10px;top: auto;display: block;cursor: pointer;}
 
 a.next_post,i.next_post{color: #9e9e9e;transition: color 1s;display: block;;}
 a.prev_post,i.prev_post{color: #9e9e9e;transition: color 1s;display: block;;}
-a.next_post:hover,a.next_post:focus{color: #8BC34A;}
-a.prev_post:hover,a.next_post:focus{color: #8BC34A;}
+a.next_post:hover,i.next_post:hover,a.next_post:focus,i.next_post:focus{color: #8BC34A;}
+a.prev_post:hover,i.prev_post:hover,a.next_post:focus,i.next_post:focus{color: #8BC34A;}
 div.post_links{color: #9c9c9c;border-top: 1px solid #e1e5e7;border-bottom: 1px solid #e1e5e7;padding: 8px 0;display: block;}
 div.tags_column,div.comments,div.post_links{margin: 4rem auto 2rem auto;max-width: 960px;}
 /** iPhone **/
