--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 .social-icon .share .fa:hover{background-color: #eee;}
 .excerpt_tags a{font-family: monospace;transition: color 1s;}
 .excerpt_tags i{color: #9e9e9e;transition: color 1s;}
-a.excerpt_tags:hover,a.excerpt_tags:focus{color:#8BC34A;}
+i.excerpt_tags:hover,a.excerpt_tags:hover,i.excerpt_tags:focus,a.excerpt_tags:focus{color:#8BC34A;}
 
 
 .tags_column a{color:#777;font-family: monospace;transition: color 1s;transition: background-color 1s;margin: 0.5rem;padding: 2px 6px;line-height: 2.5rem;display: inline-block;border: 1px solid #eee;border-radius: 30%}
@@ -60,6 +60,23 @@ div.tags_column,div.comments,div.post_links{margin: 4rem auto 2rem auto;max-widt
 
 }
 
+/*@media only screen and (min-width: 658px) and (max-width: 877px){
+  .btn, input[type="submit"], .homepage-links li a {
+    width: 10rem;
+    margin: 1rem 0;
+    padding: 0.4rem;
+    text-align: center;
+    font-size: 1.5rem;
+    font-family: cursive;
+    border: 1px solid #eee;
+    border-radius: 15px;
+    display: inline-block;
+    transition: background-color 0.6s, color 0.6s;
+}
+#homepage-hero .btn, #homepage-hero input[type="submit"], #homepage-hero .homepage-links li a, .homepage-links li #homepage-hero a {
+    margin: 0 auto;
+}
+}*/
 /** iPad **/
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
   h1.blog-title {font-size: 10rem;font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans GB, WenQuanYi Micro Hei, Verdana, Aril, sans-serif;}
