--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ h2.tags_column{font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans 
 .post_tags i:hover,.post_tags a:hover,.post_tags i:focus,post_tags a:focus{color:#8BC34A;}
 
 /*.back-to-top .fa{width: 30px;height: 30px;border-radius:50%;text-align:center;transition:background-color 0.6s;display: inline-block;float: right;position: relative;}*/
-#gotop {width: 48px;height: 48px;position: fixed;bottom: 40px;right: 10px;top: auto;display: block;cursor: pointer;}
+#gotop {color: #54693c;position: fixed;bottom: 70px;right: 5px;top: auto;display: block;cursor: pointer;}
 
 a.next_post,i.next_post{color: #9e9e9e;transition: color 1s;display: block;;}
 a.prev_post,i.prev_post{color: #9e9e9e;transition: color 1s;display: block;;}
@@ -29,7 +29,7 @@ div.post_links{color: #9c9c9c;border-top: 1px solid #e1e5e7;border-bottom: 1px s
 div.tags_column,div.comments,div.post_links{margin: 4rem auto 2rem auto;max-width: 960px;}
 /** iPhone **/
 @media only screen and (min-width: 320px) and (max-width: 424px) {
-  h1.blog-title {font-size: 5rem;font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans GB, WenQuanYi Micro Hei, Verdana, Aril, sans-serif;}
+  h1.blog-title {font-size: 4.8rem;font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans GB, WenQuanYi Micro Hei, Verdana, Aril, sans-serif;}
   p.blog-description {margin: 0 auto;font-size: 1.8rem;font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans GB, WenQuanYi Micro Hei, Verdana, Aril, sans-serif;}
 
   h1.author-title{font-size: 4rem;font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans GB, WenQuanYi Micro Hei, Verdana, Aril, sans-serif;}
